# django-easy-tenants

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  tests-ci.yml
easy_tenants/: __init__.py  apps.py  checks.py  conf.py  exceptions.py  managers.py  middleware.py  models.py  storage.py  urlresolvers.py  urls.py  utils.py  views.py
easy_tenants/management/commands/: shell_tenant.py
example/: middleware.py  settings.py  tenant_urls.py  urls.py
example/app_test/: admin.py  apps.py  models.py  views.py
example/app_test/migrations/: 0001_initial.py
example/app_test/templates/: base.html  category_form.html  category_list.html  customer_list.html  home.html  product_form.html  product_list.html
src/easy_tenants/: __init__.py  conf.py  models.py  utils.py
tests/: conftest.py  models.py  requirements.txt  settings.py  test_commands.py  test_easy_tenants.py  test_forms.py  test_middlewares.py  test_model.py  test_storages.py  test_views.py  urls.py  views.py
tests/configs/: mysql.env  postgres.env  sqlite.env
tests/templates/tests/: contact_list.html
