[tool.poetry]
name = "django-easy-tenants"
version = "0.9.1"
description = "Easy to create applications that use tenants in django"
authors = ["Cleiton Lima <cleiton.limapin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CleitonDeLima/django-easy-tenants"
homepage = "https://github.com/CleitonDeLima/django-easy-tenants"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [{ include = "easy_tenants" }]

[tool.poetry.dependencies]
python = ">=3.8"
django-appconf = "^1.0.4"
django = ">=3.2"

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
skip = "migrations"

[tool.pytest.ini_options]
env = ["DJANGO_SETTINGS_MODULE=tests.settings"]
minversion = "6.0"
addopts = """\
    --strict-config
    --strict-markers
    """
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
