[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "django-easy-tenants"
description = "Easy to create applications that use tenants in django"
version = "0.9.2"
authors = [
    { name = "Cleiton Lima", email = "<cleiton.limapin@gmail.com>"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django-appconf==1.0.4",
    "django>=3.2"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "easy_tenants" }
]

[project.urls]
Repository = "https://github.com/CleitonDeLima/django-easy-tenants"
Homepage = "https://github.com/CleitonDeLima/django-easy-tenants"


[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
skip = "migrations"

[tool.pytest.ini_options]
env = ["DJANGO_SETTINGS_MODULE=tests.settings"]
minversion = "6.0"
addopts = """\
    --strict-config
    --strict-markers
    """
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]
