[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
]

[project]
name = "django-easy-tenants"
description = "Easy to create applications that use tenants in django"
version = "0.9.4"
authors = [
    { name = "Cleiton Lima", email = "cleiton.limapin@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
urls.Repository = "https://github.com/CleitonDeLima/django-easy-tenants"
urls.Homepage = "https://github.com/CleitonDeLima/django-easy-tenants"

[dependency-groups]
test = [
    "pytest",
    "pytest-env",
    "pytest-cov",
    "pytest-django",
    "psycopg2-binary",
    "django-environ",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    --cov-report=xml
    """
django_find_project = false
xfail_strict = true
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
show_missing = true
source = ["src"]

[tool.coverage.paths]
source = [
  "src",
  ".tox/**/site-packages",
]
